--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "font-awesome": "4.7.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "3.0.1",
-    "react-swing": "2.0.1"
+    "react-easy-swipe": "0.0.18",
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
